fix(texteditor): fixed table header border not visible on Firefox

--- a/colab-webapp/src/main/node/app/src/components/documents/texteditor/theme/EditorTheme.css
+++ b/colab-webapp/src/main/node/app/src/components/documents/texteditor/theme/EditorTheme.css
@@ -129,6 +129,7 @@
     position: relative;
     cursor: default;
     outline: none;
+    background-clip: padding-box;
   }
   .TextEditorTheme__tableCellSortedIndicator {
     display: block;
